# Duplicate_Image_Finder

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  data.h  data_logger.cpp  data_logger.h  duplicate_img_gui.cpp  duplicate_img_gui.h  file_manager.cpp  file_manager.h  histogram_loader.cpp  main.cpp  main.h  notification_module.cpp  notification_module.h  opencv_utilities.cpp  opencv_utilities.h  pic_wxwidget.cpp  pic_wxwidget.h  picture_viewer.cpp  picture_viewer.h  progress_bar.cpp  progress_bar.h  scheduler.cpp  scheduler.h  scroller.cpp  scroller.h  worker.cpp  worker.h  wx_constants.h  wx_imagew.cpp  wx_imagew.h  wx_stacked_image.cpp  wx_stacked_image.h  wx_worker.cpp  wx_worker.h
AppDir/usr/lib/: libXcomposite.so.1  libXcursor.so.1  libXdamage.so.1  libXinerama.so.1  libXrandr.so.2  libXtst.so.6  libatk-1.0.so.0  libatk-bridge-2.0.so.0  libatspi.so.0  libblkid.so.1  libbsd.so.0  libcairo-gobject.so.2  libcairo.so.2  libdatrie.so.1  libdbus-1.so.3  libepoxy.so.0  libffi.so.6  libgcrypt.so.20  libgdk-3.so.0  libgdk_pixbuf-2.0.so.0  libgmodule-2.0.so.0  libgraphite2.so.3  libgthread-2.0.so.0  libjbig.so.0  libjpeg.so.62  liblz4.so.1  liblzma.so.5  libmount.so.1  libpcre.so.3  libpixman-1.so.0  libpng16.so.16  libselinux.so.1  libsystemd.so.0  libtiff.so.5  libwayland-client.so.0  libwayland-cursor.so.0  libwayland-egl.so.1  libwebp.so.6  libxcb-render.so.0  libxcb-shm.so.0  (+2 more)
data_visualization/: Vis_Network.html  vis-network.min.js
include/: LazyTree.h  cstr_split.h  data.h  data_logger.h  data_visualization.h  directory_scrolled_window.h  duplicate_img_gui.h  event_definitions.h  extended_popup.h  file_manager.h  histogram_loader.h  image_panel.h  image_scrolled_panel.h  main.h  notification_module.h  opencv_utilities.h  picture_viewer.h  progress_bar.h  scheduler.h  scrolled_window_base.h  settings_manager.h  worker.h  wx_constants.h  wx_imagew.h  wx_stacked_image.h  wx_worker.h  wxstring_array.h
resources/: CMakeLists.txt  quickapp.desktop  wxduplicatedimageapp.desktop  wxduplicateimgapp.desktop
src/: data_logger.cpp  data_visualization.cpp  directory_scrolled_window.cpp  duplicate_img_gui.cpp  event_definitions.cpp  extended_popup.cpp  file_manager.cpp  histogram_loader.cpp  image_panel.cpp  image_scrolled_panel.cpp  main.cpp  notification_module.cpp  opencv_utilities.cpp  picture_viewer.cpp  progress_bar.cpp  scheduler.cpp  scrolled_window_base.cpp  scroller.cpp  settings_manager.cpp  worker.cpp  wx_imagew.cpp  wx_stacked_image.cpp  wx_worker.cpp
